# routes/userRoutes.js
@@ -4,5 +4,6 @@ const userController = require('../controllers/userController');
 
 router.post('/login', userController.login);
 router.post('/register', userController.register);
+router.get('/list', userController.listUsers);
 
 module.exports = router;
